# vision-inference-benchmark

./: .gitattributes  .gitignore  README.md  requirements.txt
configs/: pipeline.yaml
cpp/: CMakeLists.txt
cpp/src/: main.cpp
pipeline/: __init__.py  backends.py  benchmark.py  config.py  graph_rewrite.py  metrics.py  model_zoo.py  postprocess.py  preprocess.py  report.py  summary.py
scripts/: adapt_model.py  benchmark_model.py  check_backend_support.py  compare_reports.py  export_yolo.py  run_cpp_benchmark_matrix.py  run_model_zoo_benchmark.py  summarize_benchmarks.py
tests/: test_graph_rewrite.py  test_model_zoo.py  test_summary.py
